# redis-practice

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
redis_practice/: app.py  config.py  cron_scheduler.py  queues.py  redis_client.py
redis_practice/api/depends/: mappers_depends.py  providers_depends.py  report_service_depend.py
redis_practice/api/endpoints/: reports.py
redis_practice/api/schemas/: reports.py
redis_practice/entities/: typehints.py
redis_practice/providers/: orders.py  reports.py
redis_practice/services/: orders_mapper.py  reports.py
redis_practice/tasks/: gen_tasks.py  report.py
redis_practice/tools/: records_generator.py
tests/: orders_data.json  report.json  test_tasks.py
